--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,6 +4,6 @@
         <script type="text/javascript" src="/static/index/index.js"></script>
     </head>
     <body>
-        Pastboard
+        <h2>Pasteboard</h2>
     </body>
 </html>
