--- a/src/views/boards.html
+++ b/src/views/boards.html
@@ -1,21 +1,32 @@
-<html>
-    <head>
-        <script type="text/javascript" src="/static/shared/jQuery-3.5.1.min.js"></script>
-        <script type="text/javascript" src="/static/boards/boards.js"></script>
-    </head>
-    <body>
-        <h2>Boards</h2>
+{% extends "src/views/base.html" %}
+
+{% block header %}
+    <script type="text/javascript" src="/static/boards/boards.js"></script>
+{% endblock %}
+
+{% block body %}
+    <h2 class="title is-2">Boards</h2>
+    <div class="block">
         <form action="javascript:submit()">
-            <input type="text" name="name" id="nameField" />
-            <input type="submit" value="Create" />
-            <div id="message"></div>
+            <div class="field">
+                <input type="text" name="name" id="nameField" class="input" />
+            </div>
+            <div class="field">
+                <input type="submit" value="Create" class="button" />
+            </div>
+            <div class="field">
+                <div class="help" id="message"></div>
+            </div>
         </form>
+    </div>
+
+    <div class="content">
         <ul id="boards">
             {% for board in boards %}
                 <li><a href="/board/{{ board.id }}">{{ board.name }}</a></li>
             {% else %}
-                <li> No boards found </li>
+                <li id="no-boards-message">No boards found</li>
             {% endfor %}
         </ul>
-    </body>
-</html>
+    </div>
+{% endblock %}
