Fix pagination to work for more than one page

--- a/src/views/board.html
+++ b/src/views/board.html
@@ -35,7 +35,7 @@
 
     {% if pagination.hasMore %}
     <div class="block">
-        <button id="load-more" class="button" onclick="loadMore()" cursor="{{ pagination.cursor }}">Load More</button>
+        <button id="loadMore" class="button" onclick="loadMore()" cursor="{{ pagination.cursor }}">Load More</button>
     </div>
     {% endif %}
 {% endblock %}
