--- a/src/views/board.html
+++ b/src/views/board.html
@@ -26,7 +26,10 @@
     <div class="block">
         <div id="posts">
             {% for post in posts %}
-                <div class="box post">{{ post.body }}</div>
+                <div class="box post" id="{{ post.id }}">
+                    <div class="content">{{ post.body }}</div>
+                    <button class="button is-danger deleteButton" alt="delete" onclick='deletePost("{{ post.id }}")'>×</button>
+                </div>
             {% else %}
                 <div id="no-posts-message"> No posts found </div>
             {% endfor %}
