--- a/static/board/board.css
+++ b/static/board/board.css
@@ -1,3 +1,32 @@
 .post {
-    white-space: pre;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+
+    overflow: hidden;
+    overflow-wrap: normal;
+}
+
+.content {
+    white-space: pre-wrap;
+    overflow: hidden;
+    overflow-wrap: break-word;
+
+    margin-right: 8px;
+}
+
+.deleteButton {
+    font-weight: 600;
+    font-size: 1.5rem;
+    text-align: center;
+    white-space: nowrap;
+
+    height: 1.5rem;
+    
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 6px;
+
+    justify-content: center;
 }
