--- a/web-app-2/src/server/views/index.html
+++ b/web-app-2/src/server/views/index.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <meta charset=UTF-8>
         <title>Pasteboard</title>
+        <script src="/bundles/client.js"></script>
     </head>
     <body>
         Pasteboard
