--- a/web-app/src/server/views/index.html
+++ b/web-app/src/server/views/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Pasteboard</title>
@@ -6,6 +7,7 @@
     <script id="config">
       {{ config }}
     </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div id="app"></div>
